cmake_minimum_required(VERSION 3.5)

add_subdirectory(binary_search)
add_subdirectory(graphs)
add_subdirectory(hash_table)
add_subdirectory(array)
add_subdirectory(design_pattern)
add_subdirectory(linked_list)
add_subdirectory(priority_queue)
add_subdirectory(queue_linked_list)
add_subdirectory(leetcode_practice)
